# pype.dev

./: .copier-answers.yml  .envrc  .gitignore  .windsurfrules  001-Trust-the-Story.md  001-trust-the-story.html  002-Knowing-When-to-Say-Enough.md  002-knowing-when-to-say-enough.html  003-Master-the-Beast.md  003-master-the-beast.html  004-His-Bow-in-the-Clouds.md  004-his-bow-in-the-clouds.html  005-Misplaced-Curse.md  005-misplaced-curse.html  006-A-Tale-of-a-Tower.md  006-a-tale-of-a-tower.html  007-The-Preface.md  007-the-preface.html  008-Buried-in-a-Geneology.md  008-buried-in-a-geneology.html  009-Letting-Go.md  009-letting-go.html  010-Walking-the-Blood-Path.md  010-walking-the-blood-path.html  011-Here-I-Am.md  011-here-i-am.html  012-A-Mission-Realized.md  012-a-mission-realized.html  013-Grappling-with-God---Part-1.md  013-grappling-with-god-part-1.html  014-Grappling-with-God---Part-2.md  014-grappling-with-god-part-2.html  015-Into-the-Pit.md  015-into-the-pit.html  016-Out-of-the-Pit.md  016-out-of-the-pit.html  017-A-God-Who-Hears-the-Cry.md  017-a-god-who-hears-the-cry.html  018-A-Tale-of-Two-Kingdoms.md  018-a-tale-of-two-kingdoms.html  (+1172 more)
.well-known/: nostr.json
001-trust-the-story/: index.html
002-knowing-when-to-say-enough/: index.html  raw.md
003-master-the-beast/: index.html
004-his-bow-in-the-clouds/: index.html  raw.md
005-misplaced-curse/: index.html
006-a-tale-of-a-tower/: index.html  raw.md
007-the-preface/: index.html  raw.md
008-buried-in-a-geneology/: index.html  raw.md
009-letting-go/: index.html
011-here-i-am/: index.html
(+7235 files in other folders)
