[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pype_dev"

description = "A blog created from the markata blog-starter"

readme = "README.md"
requires-python = ">=3.7"
license = "MIT"


authors = [
  { name = "Pypeaday", email = "pypeaday@pype.dev" },
]


dependencies = ['markata<0.7.0']
dynamic = ["version"]

[tool.hatch.version]
path = "pype_dev/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pyinstrument",
]

[tool.hatch.envs.default.scripts]
clean = "markata clean"
build = "markata build"
tui = "markata tui"
serve = "python -m http.server 8000 --directory=markout"
clean-build = ['clean', 'build',]
clean-tui = ['clean', 'build', 'tui']
clean-serve = ['clean', 'build', 'serve']
build-serve = ['build', 'serve']
